--- a/.github/workflows/ci-cd.yaml
+++ b/.github/workflows/ci-cd.yaml
@@ -32,4 +32,4 @@ jobs:
         with:
           context: .
           push: true
-          tags: latest, ${{ github.run_number }}
+          tags: ${{ github.repository_owner }}/digital-resume:${{ github.run_number }} , ${{ github.repository_owner }}/digital-resume:latest
