--- a/.github/workflows/ci-cd.yaml
+++ b/.github/workflows/ci-cd.yaml
@@ -22,7 +22,7 @@ jobs:
       - name: Login to GitHub Container Registry
         uses: docker/login-action@v2
         with:
-          registry: ghcr.io
+          registry: ghcr.io/${{ github.repository_owner }}
           username: ${{ github.repository_owner }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
@@ -32,4 +32,4 @@ jobs:
         with:
           context: .
           push: true
-          tags: ${{ github.repository_owner }}/digital-resume:${{ github.run_number }} , ${{ github.repository_owner }}/digital-resume:latest
+          tags: digital-resume:${{ github.run_number }} , digital-resume:latest
