change public CR to docker

--- a/.github/workflows/ci-cd.yaml
+++ b/.github/workflows/ci-cd.yaml
@@ -24,9 +24,11 @@ jobs:
       - name: Login to GitHub Container Registry
         uses: docker/login-action@v2
         with:
-          registry: ghcr.io/${{ github.repository_owner }}
-          username: ${{ github.repository_owner }}
-          password: ${{ secrets.GITHUB_TOKEN }}
+          # registry: ghcr.io/${{ github.repository_owner }}
+          # username: ${{ github.repository_owner }}
+          # password: ${{ secrets.GITHUB_TOKEN }}
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
 
       -
         name: Build and push
@@ -34,4 +36,4 @@ jobs:
         with:
           context: .
           push: true
-          tags: digital-resume:${{ github.run_number }} , digital-resume:latest
+          tags: keycache/digital-resume:${{ github.run_number }} , keycache/digital-resume:latest
