minor changes/cleanup

--- a/.github/workflows/ci-cd.yaml
+++ b/.github/workflows/ci-cd.yaml
@@ -17,16 +17,15 @@ jobs:
     permissions:
       packages: write
     steps:
-
-      - name: Checkout code
+      -
+        name: Checkout code
         uses: actions/checkout@v2
-
-      - name: Login to GitHub Container Registry
+      -
+        name: Login to Docker Container Registry
         uses: docker/login-action@v2
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
-
       -
         name: Build and push
         uses: docker/build-push-action@v3
@@ -34,13 +33,8 @@ jobs:
           context: .
           push: true
           tags: keycache/digital-resume:${{ github.run_number }} , keycache/digital-resume:latest
-  deploy:
-    name: Deploy the image on EC2
-    # if the pull request is being merged
-    if: github.event_name == 'pull_request' && github.event.action == 'closed' && github.event.pull_request.merged == true
-    runs-on: ubuntu-latest
-    steps:
-      - name: Run commands to deploy
+      -
+        name: Run commands to deploy
         uses: appleboy/ssh-action@master
         with:
           host: ${{ secrets.AWS_HOST }}
@@ -50,4 +44,4 @@ jobs:
           script: |
             sudo docker pull keycache/digital-resume:latest
             sudo docker stop $(sudo docker ps -q --filter ancestor=keycache/digital-resume:latest) 2>/dev/null
-            sudo docker run -p 8501:8501 keycache/digital-resume:latest
+            sudo docker run -d -p 8501:8501 keycache/digital-resume:latest
